# django-clean-arch

./: .gitignore  Dockerfile  api.http  db.sqlite3  docker-compose.yaml  interface.py  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
__core__/application/: use_cases.py
__core__/domain/: entities.py  exceptions.py  repositories.py  validations.py
__core__/infra/: repositories.py  use_cases_factories.py
__core__/infra/common/: app_config.py
__core__/infra/product/: apps.py  models.py
__core__/infra/product/migrations/: 0001_initial.py
app/: admin.py  api.py  models.py  urls.py
app/migrations/: 0001_initial.py
micro_videos/: asgi.py  settings.py  urls.py  wsgi.py
